# annotator

./: .gitignore  README.md  __main__.py  aled.py  create_shortcut.bat  launch.bat  launch.py  launch.sh  requirements.txt  run.py  setup.py
Seqensor/: examples_bootstrap.py  pyproject.toml  segments_bootstrap.csv
Seqensor/fluxseq/: __init__.py  features.py  io.py  segment.py  sync.py
chunk_000.20260128_170426_T3_0/: annotator_info.json  episode_000000_subtitle.json  episode_000000_video_quality.json  episode_000001_subtitle.json  episode_000001_video_quality.json  episode_000002_subtitle.json  episode_000002_video_quality.json  episode_000003_subtitle.json  episode_000003_video_quality.json  episode_000004_subtitle.json  episode_000004_video_quality.json  quality_check.json
chunk_exports/chunk_000.20260316_174007/: annotator_info.json  episode_000000_subtitle.json  episode_000000_video_quality.json
data/: README.md  examples_bootstrap.py  physical_data.annotators.json  physical_data.cameras.json  physical_data.scenarios.json
data/fluxseq/: __init__.py  features.py  segment.py
scripts/: create_shortcut.ps1  create_test_dataset.py  download_lerobot_dataset.py  generate_icon.py  simple_test.py  test_application.py
src/: __init__.py  main.py
src/core/: __init__.py  csv_validator.py  data_loader.py  dataset.py  seqensor_worker.py  session_loader.py  session_swap.py  synchronizer.py  transforms.py
src/labeling/: __init__.py  export.py  label_manager.py
src/queue/: rabbitmq_consumer.py
test_dataset/: DATASET_INFO.txt  README.md
tests/: test_transforms.py
(+42 files in other folders)
