[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxseq"
version = "0.1.0"
description = "Synchronize multimodal streams and bootstrap temporal segmentation"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "scikit-learn>=1.2",
]

[tool.setuptools]
package-dir = {"" = ""}

[tool.setuptools.packages.find]
where = ["."]
include = ["fluxseq*"]
